<resources>
    <string name="app_name">Empty</string>
    <string name="map">map</string>
    <string name="planner">planner</string>
    <string name="stat">stat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_location">Search Location</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="new_activity">New Activity</string>
    <string name="map_speakable">map_speakable</string>
    <string name="time_span">60 min</string>
    <string name="max_work_time">Max work time: 120min</string>
    <string name="reward_amount">Reward: 12</string>
    <string name="feather">feather</string>
    <string name="start">Start</string>
    <string name="workType">workType</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes!</string>
    <string name="cancel_anyway">Cancel Anyway</string>
    <string name="wait">Wait!</string>
    <string name="warning_txt">You will not earn your %d feathers if you give up now. Take a deep breadth, hold on for a little while!</string>
    <string name="keep_going">Want to keep going?</string>
    <string name="welcome">Welcome to\nEarlyJay</string>
    <string name="menu">menu</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_duration">Select Duration</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="done">Done</string>
    <string name="percentage_display">%.1f%%</string>
    <string name="select_alert">Select Alert</string>
    <string name="cancel">Cancel</string>
    <string name="work">Work</string>
    <string name="class_">Class</string>
    <string name="team">Team</string>
    <string name="sport">Sport</string>
    <string name="_5_minutes_before">5 min before</string>
    <string name="_10_minutes_before">10 min before</string>
    <string name="_15_minutes_before">15 min before</string>
    <string name="_30_minutes_before">30 min before</string>
    <string name="_1_hour_before">1 hour before</string>
    <string name="_2_hours_before">2 hours before</string>
    <string-array name="Stats_Display">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="Planner_Display">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="start_task">Start Task</string>
    <string name="edit">Edit</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="delete">Delete</string>
    <string name="none">None</string>
    <string name="fail">Failed</string>
    <string name="miss">Missed</string>
    <string name="complete">Complete</string>
    <string name="completion_notification">You have received %d </string>
    <string name="count_down_string">%s:%s:%s    Remains</string>
    <string name="num_picker_time_str">%d min</string>
    <string name="reward">Reward: %d</string>
    <string name="productive_report">more productive than previous %s!</string>
    <string name="less_productive_report">less productive than previous %s… Focus!</string>
</resources>