<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnQuitWarning">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/warning_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="64dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/popup_shape"
        android:gravity="center_horizontal"
        android:includeFontPadding="true"
        android:paddingTop="16dp"
        android:text="@string/wait"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warning_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:text="@string/warning_txt"
        app:layout_constraintBottom_toTopOf="@id/confirm_prompt"
        app:layout_constraintEnd_toEndOf="@+id/warning_title"
        app:layout_constraintStart_toStartOf="@+id/warning_title"
        app:layout_constraintTop_toTopOf="@+id/warning_title" />

    <TextView
        android:id="@+id/confirm_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_going"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yes"
        app:layout_constraintEnd_toEndOf="@+id/warning_title"
        app:layout_constraintStart_toStartOf="@+id/warning_title"
        app:layout_constraintTop_toBottomOf="@+id/warning_txt"
        app:layout_constraintVertical_bias="0.87" />

    <Button
        android:id="@+id/yes"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences"
        android:text="@string/yes"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/no"
        app:layout_constraintEnd_toEndOf="@+id/warning_title"
        app:layout_constraintStart_toStartOf="@+id/warning_title" />

    <Button
        android:id="@+id/no"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/red"
        android:inputType="textCapSentences"
        android:text="@string/cancel_anyway"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/warning_title"
        app:layout_constraintEnd_toEndOf="@+id/warning_title"
        app:layout_constraintStart_toStartOf="@+id/warning_title" />



</androidx.constraintlayout.widget.ConstraintLayout>