<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleSetting">

    <ImageView
        android:id="@+id/popup_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="160dp"
        android:src="@drawable/popup_shape" />

    <Spinner
        android:id="@+id/workType"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_above="@+id/startTimeImg"
        android:layout_alignStart="@+id/startTimeImg"
        android:layout_alignEnd="@+id/startTime"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/spinner_look"
        android:dropDownWidth="match_parent"
        android:elevation="4dp"
        android:foregroundGravity="center"
        android:gravity="center"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/startTimeImg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/durationImg"
        android:layout_alignStart="@+id/durationImg"
        android:layout_marginBottom="8dp"
        android:src="@drawable/round_access_time" />

    <ImageView
        android:id="@+id/durationImg"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_above="@+id/switch_img"
        android:layout_alignStart="@+id/switch_img"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/round_hourglass_empty_24" />

    <Button
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startTimeImg"
        android:layout_alignEnd="@+id/duration"
        android:layout_alignBottom="@+id/startTimeImg"
        android:layout_marginStart="6dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/startTimeImg"
        android:inputType="textCapSentences"
        android:text="@string/select_start_time"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/durationImg"
        android:layout_alignEnd="@+id/switch_img"
        android:layout_alignBottom="@+id/durationImg"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/startTimeImg"
        android:inputType="textCapSentences"
        android:text="@string/select_duration"
        tools:ignore="TextViewEdits" />

    <ImageView
        android:id="@+id/switch_img"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_above="@+id/done"
        android:layout_alignStart="@+id/done"
        android:layout_alignEnd="@+id/done"
        android:layout_marginBottom="8dp"
        android:padding="1dp"
        android:src="@drawable/switch_buttons" />

    <Button
        android:id="@+id/simple"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/switch_img"
        android:layout_alignTop="@+id/switch_img"
        android:layout_alignBottom="@+id/switch_img"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/lavender"
        android:inputType="textCapSentences"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/simple"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:cornerRadius="4dp"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/done"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/popup_background"
        android:layout_alignEnd="@+id/popup_background"
        android:layout_alignBottom="@+id/popup_background"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:inputType="textCapSentences"
        android:text="@string/done"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/advance"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/switch_img"
        android:layout_alignEnd="@+id/switch_img"
        android:layout_alignBottom="@+id/switch_img"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FEFEFE"
        android:inputType="textCapSentences"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/advanced"
        android:textColor="@color/lavender"
        android:textSize="11sp"
        app:cornerRadius="4dp"
        tools:ignore="TextViewEdits" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/popup_background"
        android:layout_alignEnd="@+id/popup_background"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="-20dp"
        android:clickable="true"
        android:contentDescription="@string/yes"
        android:focusable="true"
        android:scaleType="center"
        android:src="@drawable/round_cancel_24"
        app:backgroundTint="@color/white"
        app:ensureMinTouchTargetSize="false"
        app:fabSize="mini"
        app:maxImageSize="40dp"
        app:tint="@color/lavender"
        tools:ignore="TouchTargetSizeCheck" />


</RelativeLayout>