<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Popup_frag">


    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/circular_seek_bar"
        android:layout_width="232dp"
        android:layout_height="217dp"
        android:layout_centerInParent="true"
        app:cs_circle_color="@color/light_gray"
        app:cs_circle_fill="@color/white"
        app:cs_circle_progress_color="@color/lavender"
        app:cs_circle_stroke_width="6dp"
        app:cs_circle_style="round"
        app:cs_circle_x_radius="0dp"
        app:cs_circle_y_radius="0dp"
        app:cs_disable_pointer="false"
        app:cs_disable_progress_glow="true"
        app:cs_hide_progress_when_empty="true"
        app:cs_lock_enabled="true"
        app:cs_maintain_equal_circle="true"
        app:cs_max="120"
        app:cs_move_outside_circle="true"
        app:cs_negative_enabled="false"
        app:cs_pointer_alpha_ontouch="5"
        app:cs_pointer_angle="0"
        app:cs_pointer_color="@color/lavender"
        app:cs_pointer_stroke_width="20dp"
        app:cs_progress="60"
        app:cs_use_custom_radii="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/count_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_span"
        android:textColor="@color/lavender"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/circular_seek_bar"
        app:layout_constraintEnd_toEndOf="@+id/circular_seek_bar"
        app:layout_constraintStart_toStartOf="@+id/circular_seek_bar"
        app:layout_constraintTop_toTopOf="@+id/circular_seek_bar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/max_work_time"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circular_seek_bar"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reward_amount"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="23dp"
        android:layout_height="31dp"
        android:src="@drawable/feather_512"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/feather" />

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="48dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.082" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="159dp"
        android:layout_height="56dp"
        android:contentDescription="@string/worktype"
        android:dropDownWidth="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/circular_seek_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856"
        android:padding="8dp"
        android:entries="@array/type_array"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="230dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/circular_seek_bar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/circular_seek_bar"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.452" />

</androidx.constraintlayout.widget.ConstraintLayout>