<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/planner_card_view"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/planner_item_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/planner_item_background"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:text="@string/time_span" />

            <TextView
                android:id="@+id/Title"
                android:layout_width="314dp"
                android:layout_height="29dp"
                android:layout_above="@+id/time"
                android:layout_alignStart="@+id/planner_item_background"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:text="@string/workType" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="35dp"
                android:layout_height="42dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/menu"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/meatball_menu"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>